--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "PUBG Font",
-    "short_name": "pubgfont.com",
+    "name": "pubgfont.com",
+    "short_name": "PUBG Font",
     "start_url": "/",
     "display": "standalone",
     "icons": [
